--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
                 </div>
             </div>
+            <div class="error-message bg-gray-800 
+                p-4 rounded-lg shadow-lg"></div>
         </div>
         <script src="./script.js"></script>
     </body>
